# quasi

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GENESIS.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
afana/: Cargo.toml  __init__.py  backend_selector.py  circuit.py  cli.py  compile.py  ehrenfest.py  export.py  hal-contract.json  noise_model.py  optimize.py  parametric.py  parser.py  phase_kickback.py  requirements.txt  test_gate_synthesis.py  variational.py
afana/backends/: __init__.py  dynamical_decoupling.py  error_mitigation.py  ibm.py
afana/src/: ast.rs  backend.rs  cbor.rs  emit.rs  error.rs  gate_synthesis.rs  gates.rs  lib.rs  main.rs  optimize.rs  parameterized.rs  parser.rs  synthesis.rs  trotter.rs  type_check.rs  type_checker.rs  types.rs  zx_to_qasm.rs
afana/src/qasm3/: generation.rs  mod.rs  synthesis.rs
afana/src/qasm3_emitter/: test.rs
afana/src/synthesis/: zx_to_qasm.rs
afana/tests/: __init__.py  compile_examples.rs  gate_synthesis.rs  parse_examples.rs  qasm3_validation.rs  qasm3_validation_test.py  roundtrip.rs  rz_synthesis.rs  test_backend_selector.py  test_cli.py  test_cnot_synthesis.py  test_cz_synthesis.rs  test_dynamical_decoupling.py  test_error_mitigation.py  test_ibm_backend.py  test_ibm_transpiler.py  test_noise_model.py  test_optimize.py  test_parametric.py  test_parser.py  test_phase_kickback.py  test_sgate_synthesis.rs  test_swap_qasm3.py  test_sx_emission.rs  test_variational.py  test_y_gate_synthesis.rs  test_zx_ir_to_qasm3.py  type_checking.rs  type_system_tests.rs  validate_qasm3.rs
afana/tests/fixtures/hal_requests/: sample_request_1.json  sample_request_2.json
afana/tests/qasm3_validation/: test_qasm3_validation.py
benchmarks/: README.md  __init__.py  report.py  run_benchmarks.py  test_benchmarks.py
docs/: BENCHMARK.md  ELIGIBLE-MODELS.md  ISSUE-GENERATION.md  coherence.md  ehrenfest-generation-guide.md  optimization.md  pauli-test-audit.md  quantcert-grand-prix.md
examples/: README.md  bell.ef  ghz.ef  grover.ef  heisenberg.paul  ising.paul  rabi.paul  teleport.ef  types.ef  vqe.ef
quasi-agent/: README.md  __init__.py  cli.py  completion.py  generate_issue.py  hal_client.py  quasi_agent.py  race.py  rotate.py  solve.py  test_help_text.py  test_smoke.py  test_urn_cli.py
quasi-board/: .dockerignore  Dockerfile  README.md  server.py
quasi-mcp/: README.md  package.json  requirements.txt
quasi-senate/: Cargo.toml  rotation.toml
quasi-senate/deploy/: quasi-senate-council.service  quasi-senate-council.timer  quasi-senate-draft.service  quasi-senate-draft.timer  quasi-senate-solve.service  quasi-senate-solve.timer
quasi-senate/grafana/: encefalos.json  model-performance.json  senate-provider-bench.json
quasi-senate/migrations/: 001_telemetry.sql  002_telemetry.sql  003_telemetry.sql  004_model_health.sql  005_roster_events.sql
quasi-senate/scripts/: collect_project_stats.py  pr-outcome-poller.service  pr-outcome-poller.timer  pr_outcome_poller.py  quasi-senate-watchdog.service  quasi-senate-watchdog.timer  senate_watchdog.py
quasi-senate/src/: config.rs  council.rs  drafter.rs  fedi.rs  gate.rs  github.rs  health_check.rs  ledger.rs  lib.rs  main.rs  matrix.rs  pipeline.rs  prompts.rs  provider.rs  reviewer.rs  rotation.rs  solver.rs  state.rs  telemetry.rs  telemetry_log.rs  types.rs
quasi-senate/tests/: test_pipeline.rs  test_prompts.rs  test_rotation.rs  test_types.rs
spec/: BENCHMARK.md  FORMAT.md  LANGUAGE.md  NOISE.md  README.md  __init__.py  ehrenfest-v0.1.cddl  ehrenfest-v0.2.cddl  error_codes.md  urn-v0.1.cddl
tests/: qasm3_edge_cases.rs  test_export_qasm3.py  toffoli_synthesis.rs
ts-halcontract/: README.md  package.json  tsconfig.json
urnery/: README.md  __init__.py  main.py  models.py  storage.py  validation.py
(+52 files in other folders)
