[package]
name = "quasi-senate"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Governance daemon for the QUASI Pauli-Test Senate Loop"
repository = "https://github.com/ehrenfest-quantum/quasi"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for LLM providers + GitHub API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for request IDs, conference IDs, etc.
uuid = { version = "1", features = ["v4"] }

# Environment variable loading
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "2"

# Retry logic for HTTP calls
tokio-retry = "0.3"

# Regex for parsing issue footers
regex = "1"

# Base64 for GitHub Contents API
base64 = "0.22"

# File locking for state persistence
fs2 = "0.4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"
